# libASPL

./: CMakeLists.txt
scripts/: generate-accessors.py  generate-bridge.py  generate-strings.py
